force-app/main/default/objects/Deal_Review_Configuration__c/Deal_Review_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains the core values used in the Deal Level flows which determine what Deal Level is assigned</description>
    <label>Deal Review Configuration</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>DR Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Review Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>