force-app/main/default/objects/Deal_Review_Configuration__c/fields/ACV_DL1_LB__c.field-meta.xml
<CustomField>
    <fullName>ACV_DL1_LB__c</fullName>
    <description>ACV value for the lower bound of Deal Level 1</description>
    <label>ACV - DL1 - LB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>