force-app/main/default/objects/Deal_Review_Configuration__c/fields/ACV_DL3_MB__c.field-meta.xml
<CustomField>
    <fullName>ACV_DL3_MB__c</fullName>
    <description>ACV that exceeds this value along with TotalCashView margin will make a Deal Level 3</description>
    <label>ACV - DL3 - MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>