force-app/main/default/objects/Deal_Review_Configuration__c/fields/Capital_DL0_UB__c.field-meta.xml
<CustomField>
    <fullName>Capital_DL0_UB__c</fullName>
    <description>the dollar value for the upper bound in Capital Expenditure for Deal Level 0</description>
    <label>Capital - DL0 - UB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>