force-app/main/default/objects/Deal_Review_Configuration__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Non-Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>