force-app/main/default/objects/Deal_Review_Configuration__c/fields/Floor_Revenue_Realization_MB__c.field-meta.xml
<CustomField>
    <fullName>Floor_Revenue_Realization_MB__c</fullName>
    <label>Floor Revenue Realization - MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>