force-app/main/default/objects/Deal_Review_Configuration__c/fields/Revenue_Dilution_UB__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Dilution_UB__c</fullName>
    <label>Revenue Dilution - UB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>