force-app/main/default/objects/Deal_Review_Configuration__c/fields/TotalCashView_LB__c.field-meta.xml
<CustomField>
    <fullName>TotalCashView_LB__c</fullName>
    <label>TotalCashView - LB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>