force-app/main/default/objects/Deal_Review_Configuration__c/fields/TotalCashView_MB__c.field-meta.xml
<CustomField>
    <fullName>TotalCashView_MB__c</fullName>
    <label>TotalCashView - MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>