force-app/main/default/objects/Deal_Review_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Active__c</columns>
    <columns>ACV_DL1_LB__c</columns>
    <columns>ACV_DL1_UB__c</columns>
    <columns>Floor_Revenue_Realization_LB__c</columns>
    <columns>Floor_Revenue_Realization_UB__c</columns>
    <columns>Revenue_Dilution_LB__c</columns>
    <columns>Revenue_Dilution_MB__c</columns>
    <columns>Revenue_Dilution_UB__c</columns>
    <columns>TotalCashView_LB__c</columns>
    <columns>TotalCashView_MB__c</columns>
    <columns>TotalCashView_UB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>